{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 32,
  "lineage": "48a0fa49-d5a6-4fbb-9536-2f096f358a28",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb",
      "name": "ec2-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:007481550016:loadbalancer/app/plain-to-level-up-ec2-alb/57629a4de4b0e0a9",
            "arn_suffix": "app/plain-to-level-up-ec2-alb/57629a4de4b0e0a9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "plain-to-level-up-ec2-alb-2011062116.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:007481550016:loadbalancer/app/plain-to-level-up-ec2-alb/57629a4de4b0e0a9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "plain-to-level-up-ec2-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b5cfaf33fe758822"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01230ba653684081d"
              },
              {
                "subnet_id": "subnet-0e48b0a5fd9e1abf9"
              }
            ],
            "subnets": [
              "subnet-01230ba653684081d",
              "subnet-0e48b0a5fd9e1abf9"
            ],
            "tags": {
              "Name": "plain-to-level-up-ec2-alb"
            },
            "tags_all": {
              "Name": "plain-to-level-up-ec2-alb"
            },
            "vpc_id": "vpc-00eef5c836a0a81d5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.new-vpc.aws_security_group.sg",
            "module.new-vpc.aws_subnet.subnets",
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ec2-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:007481550016:listener/app/plain-to-level-up-ec2-alb/57629a4de4b0e0a9/182a5136ed6a7cc4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:007481550016:targetgroup/plain-to-level-up-ec2-tg/d019581274ddacf3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:007481550016:listener/app/plain-to-level-up-ec2-alb/57629a4de4b0e0a9/182a5136ed6a7cc4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:007481550016:loadbalancer/app/plain-to-level-up-ec2-alb/57629a4de4b0e0a9",
            "mutual_authentication": [],
            "port": 3333,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_alb.ec2-alb",
            "module.ec2.aws_lb_target_group.ec2-tg",
            "module.new-vpc.aws_security_group.sg",
            "module.new-vpc.aws_subnet.subnets",
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:007481550016:targetgroup/plain-to-level-up-ec2-tg/d019581274ddacf3",
            "arn_suffix": "targetgroup/plain-to-level-up-ec2-tg/d019581274ddacf3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:007481550016:targetgroup/plain-to-level-up-ec2-tg/d019581274ddacf3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:007481550016:loadbalancer/app/plain-to-level-up-ec2-alb/57629a4de4b0e0a9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "plain-to-level-up-ec2-tg",
            "port": 3333,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "plain-to-level-up-ec2-tg"
            },
            "tags_all": {
              "Name": "plain-to-level-up-ec2-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00eef5c836a0a81d5"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007481550016:internet-gateway/igw-027b16baec4a3f02b",
            "id": "igw-027b16baec4a3f02b",
            "owner_id": "007481550016",
            "tags": {
              "Name": "plain-to-level-up-igw"
            },
            "tags_all": {
              "Name": "plain-to-level-up-igw"
            },
            "vpc_id": "vpc-00eef5c836a0a81d5"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007481550016:route-table/rtb-0f6a7a2fd62f737ea",
            "id": "rtb-0f6a7a2fd62f737ea",
            "owner_id": "007481550016",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027b16baec4a3f02b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "plain-to-level-up-rtb"
            },
            "tags_all": {
              "Name": "plain-to-level-up-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00eef5c836a0a81d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a48781158baee27",
            "route_table_id": "rtb-0f6a7a2fd62f737ea",
            "subnet_id": "subnet-01230ba653684081d"
          },
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_route_table.new-rtb",
            "module.new-vpc.aws_subnet.subnets",
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015599883c8efe2b5",
            "route_table_id": "rtb-0f6a7a2fd62f737ea",
            "subnet_id": "subnet-0e48b0a5fd9e1abf9"
          },
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_route_table.new-rtb",
            "module.new-vpc.aws_subnet.subnets",
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007481550016:security-group/sg-0b5cfaf33fe758822",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5cfaf33fe758822",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all inbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250403005000495200000001",
            "name_prefix": "terraform-",
            "owner_id": "007481550016",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "plain-to-level-up-sg"
            },
            "tags_all": {
              "Name": "plain-to-level-up-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00eef5c836a0a81d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007481550016:subnet/subnet-01230ba653684081d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01230ba653684081d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "007481550016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "plain-to-level-up-subnet-0"
            },
            "tags_all": {
              "Name": "plain-to-level-up-subnet-0"
            },
            "vpc_id": "vpc-00eef5c836a0a81d5"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007481550016:subnet/subnet-0e48b0a5fd9e1abf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e48b0a5fd9e1abf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "007481550016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "plain-to-level-up-subnet-1"
            },
            "tags_all": {
              "Name": "plain-to-level-up-subnet-1"
            },
            "vpc_id": "vpc-00eef5c836a0a81d5"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007481550016:vpc/vpc-00eef5c836a0a81d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05fa66e1e64996eec",
            "default_route_table_id": "rtb-07c3f3eeba26222c3",
            "default_security_group_id": "sg-090d7d63b87ccc6e1",
            "dhcp_options_id": "dopt-04da536613327de3b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00eef5c836a0a81d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c3f3eeba26222c3",
            "owner_id": "007481550016",
            "tags": {
              "Name": "plain-to-level-up-vpc"
            },
            "tags_all": {
              "Name": "plain-to-level-up-vpc"
            }
          }
        }
      ]
    }
  ]
}